--- a/src/apps/jarvis/package.json
+++ b/src/apps/jarvis/package.json
@@ -23,9 +23,5 @@
   "bugs": {
     "url": "https://github.com/andrew-codes/alexa-jarvis/issues"
   },
-  "homepage": "https://github.com/andrew-codes/alexa-jarvis#readme",
-  "dependencies": {
-    "alexa-app": "^2.3.4",
-    "axios": "^0.15.3"
-  }
+  "homepage": "https://github.com/andrew-codes/alexa-jarvis#readme"
 }
