--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "@andrew-codes/smith-simms-family-alexa",
   "version": "0.0.0",
+  "private": true,
   "description": "Alexa apps for smith-simms family.",
-  "main": "src/index.js",
   "scripts": {
-    "postinstall": "cd apps/jarvis && npm install && cd ./../../",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
     "build": "babel src --out-dir dist",
-    "prestart": "npm run build",
-    "start": "cd dist && nodemon server.js"
+    "postbuild": "cp src/alexa-apps/jarvis/package.json dist/alexa-apps/jarvis/package.json",
+    "predev": "npm run build",
+    "dev": "cd dist && node server.js",
+    "start": "cd dist && nodemon server.js",
+    "predocker:deployment": "npm run build && docker-compose build",
+    "docker:deployment": "docker-compose up"
   },
   "repository": {
     "type": "git",
@@ -40,6 +45,7 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0"
   }
 }
