Enable dev mode
- npm start to run dev mode in container
- npm run start/local to run locally without container
- npm run deployment/production to run production container
- npm run deployment/production/build to build production container
- dev Dockerfile and additional docker-compose dev file
- cannot leverage alexa-app-server to auto load server modules AND use JSX on server-side
	- must standardize on ES2105 instead of commonjs modules for this to work

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,22 @@
 version: "2"
 services:
-    web:
+    webapp:
         build: .
         volumes:
-            - ./sslcert:/app/dist/sslcert
+            - ./sslcert:/app/sslcert
         ports:
             - "8080:8080"
             - "8443:8443"
         links:
             - mongo
+        depends_on:
+            - mongo
     mongo:
         image: mongo
         ports:
             - "27017:27017"
+        depends_on:
+            - mongodata
     mongodata:
         image: tianon/true
         volumes:
