--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,16 @@
 {
-    "presets": [
-        "es2015",
-        "react",
-        "stage-1"
-    ],
     "ignore": [
         "node_modules"
+    ],
+    "plugins": [
+        "transform-es2015-modules-commonjs",
+        "transform-runtime",
+        "add-module-exports",
+        "transform-react-display-name"
+    ],
+    "presets": [
+        "react",
+        "es2015",
+        "stage-1"
     ]
 }
