Move dev files to own directory to reduce clutter in root directory

--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "predeployment/production": "npm run deployment/production/build",
     "deployment/production": "docker-compose up",
     "start/local": "cross-env NODE_ENV=development nodemon dev-server.js",
-    "start/build": "docker-compose -f docker-compose.yml -f dev.docker-compose.yml build",
-    "prestart": "npm run start/build",
-    "start": "docker-compose -f docker-compose.yml -f dev.docker-compose.yml up"
+    "start/build": "docker-compose -f docker-compose.yml -f dev/dev.docker-compose.yml build",
+    "start": "docker-compose -f docker-compose.yml -f dev/dev.docker-compose.yml up"
   },
   "repository": {
     "type": "git",
