--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "axios": "^0.15.3",
     "nodemon": "^1.11.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
