Dev env with hot loading
- dev env does not run in a container
	- too unreliable for it to pick up changes on the shared volumes to trigger webpack and hot loading
- can optionally run a mongo service for dev purposes, so no longer need dev specific docker files
- added webpack.config.js for production builds as well

--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,10 @@
         "react",
         "es2015",
         "stage-1"
-    ]
+    ],
+    "env": {
+        "plugins": [
+            "react-hot-loader/babel"
+        ]
+    }
 }
