--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "alexa-app": "^2.3.4",
     "alexa-app-server": "^2.3.1",
     "axios": "^0.15.3",
+    "material-ui": "^0.16.6",
     "nodemon": "^1.11.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "react-title-component": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
