--- a/package.json
+++ b/package.json
@@ -43,13 +43,18 @@
     "alexa-app": "^2.3.4",
     "alexa-app-server": "^2.3.1",
     "axios": "^0.15.3",
+    "immutable": "^3.8.1",
     "material-ui": "^0.16.6",
     "nodemon": "^1.11.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
-    "react-title-component": "^1.0.1"
+    "react-title-component": "^1.0.1",
+    "redux": "^3.6.0",
+    "redux-loop": "^2.2.2",
+    "redux-modules": "^1.0.0",
+    "reselect": "^2.5.4"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
