--- a/package.json
+++ b/package.json
@@ -54,13 +54,15 @@
     "redux": "^3.6.0",
     "redux-loop": "^2.2.2",
     "redux-modules": "^1.0.0",
-    "reselect": "^2.5.4"
+    "reselect": "^2.5.4",
+    "uniqueid": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-react-display-name": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.15.0",
