--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "alexa-app": "^2.3.4",
     "alexa-app-server": "^2.3.1",
     "axios": "^0.15.3",
+    "body-parser": "^1.15.2",
     "immutable": "^3.8.1",
     "material-ui": "^0.16.6",
+    "mongodb": "^2.2.16",
     "nodemon": "^1.11.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
