Consolidate database access and connection to `Db.js`
- rename dataService => dataApi
- leverage `getDb` and related methods in dataApi and webUI
- Use bluebird as Promise in order to get additional functionality like `.finally`

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Alexa apps for smith-simms family.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf dist && rm src/public/js/bundle.js",
-    "build/src/server/alexa-apps": "cp src/alexa-apps/jarvis/package.json dist/alexa-apps/jarvis/package.json",
+    "clean": "rm -rf dist && rm -f src/public/js/bundle.js",
+    "build/src/server/alexa-apps": "cp src/alexa-apps/lucy/package.json dist/alexa-apps/lucy/package.json",
     "prebuild/src/server": "npm run clean",
     "build/src/server": "babel src --out-dir dist",
     "postbuild/src/server": "npm run build/src/server/alexa-apps",
@@ -14,7 +14,7 @@
     "build/src/client": "webpack",
     "build/src": "npm run build/src/client && npm run build/src/server",
     "deployment/production/start": "cd dist && NODE_ENV=production nodemon server.js",
-    "deployment/production/build": "npm run build/src && docker-compose -f docker-compose.yml -f docker-compose-mongo.yml build",
+    "deployment/production/build": "npm run build/src && docker-compose -f docker-compose-nginx.yml -f docker-compose.yml -f docker-compose-mongo.yml build",
     "predeployment/production": "npm run deployment/production/build",
     "deployment/production": "docker-compose up",
     "start": "cross-env NODE_ENV=development node dev/dev-server.js",
@@ -43,6 +43,7 @@
     "alexa-app": "^2.3.4",
     "alexa-app-server": "^2.3.1",
     "axios": "^0.15.3",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "immutable": "^3.8.1",
     "material-ui": "^0.16.6",
