`npm clean` was too aggressive
- was cleaning after building the client; thus removing the built client code

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "description": "Alexa apps for smith-simms family.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf dist && rm -f src/public/js/bundle.js",
+    "clean/client": "rm -f src/public/js/bundle.js",
+    "clean/server": "rm -rf dist",
     "build/src/server/alexa-apps": "cp src/alexa-apps/lucy/package.json dist/alexa-apps/lucy/package.json",
-    "prebuild/src/server": "npm run clean",
+    "prebuild/src/server": "npm run clean/server",
     "build/src/server": "babel src --out-dir dist",
     "postbuild/src/server": "npm run build/src/server/alexa-apps",
-    "prebuild/src/client": "npm run clean",
+    "prebuild/src/client": "npm run clean/client",
     "build/src/client": "webpack",
     "build/src": "npm run build/src/client && npm run build/src/server",
     "deployment/production/start": "cd dist && NODE_ENV=production nodemon server.js",
